rust/macros/tests/ui/fail/observed_only_rejects_args.rs
use telltale_macros::observed_only;

#[observed_only("bad")]
fn project_view() {}

fn main() {}
